--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
 	"compilerOptions": {
 		"target": "es2024",
-		"module": "es2022",
-		"moduleResolution": "node",
+		"module": "node16",
+		"moduleResolution": "node16",
 		"declaration": true,
 		"outDir": "dist",
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true
 	},
-	"include": ["src"]
+	"include": ["src", "test"]
 }
