--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
 	},
 	"types": "dist/index.d.ts",
 	"scripts": {
+		"dev": "vite",
 		"clean": "rm -rf dist/*.js && rm -rf dist/*.wasm && rm -rf dist/*.d.ts",
-		"build": "npm run clean && npm run build:node && npm run build:browser && npm run build:wrappers",
+		"build": "npm run clean && npm run build:node && npm run build:browser && npm run build:wrappers && npm run build:examples",
 		"build:node": "emcc -O3 --bind -o dist/voro_node.js src/voro_wrapper.cpp voro++/src/cell.cc voro++/src/common.cc voro++/src/container.cc voro++/src/c_loops.cc voro++/src/unitcell.cc voro++/src/v_base.cc voro++/src/v_compute.cc voro++/src/wall.cc -I./voro++/src -s WASM=1 -s MODULARIZE=1 -s EXPORT_ES6=1 -s EXPORT_NAME='createVoroModule' -s ALLOW_MEMORY_GROWTH=1 -s ENVIRONMENT='node'",
 		"build:browser": "emcc -O3 --bind -o dist/voro_browser.js src/voro_wrapper.cpp voro++/src/cell.cc voro++/src/common.cc voro++/src/container.cc voro++/src/c_loops.cc voro++/src/unitcell.cc voro++/src/v_base.cc voro++/src/v_compute.cc voro++/src/wall.cc -I./voro++/src -s WASM=1 -s MODULARIZE=1 -s EXPORT_ES6=1 -s EXPORT_NAME='createVoroModule' -s ALLOW_MEMORY_GROWTH=1 -s ENVIRONMENT='web'",
 		"build:wrappers": "tsc -p tsconfig.build.json && mv dist/index.js dist/wrapper_base.js && cat dist/wrapper_base.js | sed 's/REPLACE_ME/voro_node/' > dist/index.js && cat dist/wrapper_base.js | sed 's/REPLACE_ME/voro_browser/' > dist/browser.js && rm dist/wrapper_base.js",
+		"build:examples": "vite build",
+		"serve": "npx http-server dist",
 		"prepublishOnly": "npm run build",
 		"compile": "emcc -Isrc src/voro_wrapper.cpp ../voro++/src/voro++.cc -o voro_module.js -s MODULARIZE=1 -s EXPORT_NAME='createVoroModule' -s EXTRA_EXPORTED_RUNTIME_METHODS='[\"cwrap\"]' --bind -O3",
 		"test": "npm run test:context && npm run test:cell",
@@ -49,7 +52,11 @@
 	"devDependencies": {
 		"@types/chai": "^5.0.1",
 		"@types/mocha": "^10.0.10",
+		"@types/three": "^0.182.0",
+		"lil-gui": "^0.21.0",
+		"three": "^0.182.0",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"vite": "^7.3.0"
 	}
 }
